<resources>
    <string name="app_name">StudentNetwork</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="inscription">Inscription</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_mot_de_passe">Confirmer Mot de Passe</string>
    <string name="email">Email</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>

    <string name="authenticate_url">authenticate/</string>
    <string name="user_registration_url">kiuser/register/</string>
    <string name="user_crud_url">kiuser/</string>
    <string name="content_crud">contents/</string>

    <string name="connexion">Connexion</string>
    <string name="not_registered">Pas encore inscrit ?</string>
    <string name="connection">Se connecter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_key">userKey</string>
    <string name="user_id_key">id</string>
    <string name="user_firstName_key">firstName</string>
    <string name="user_lastName_key">lastName</string>
    <string name="user_email_key">email</string>
    <string name="user_password_key">password</string>
    <string name="user_aboutMe_key">aboutMe</string>
    <string name="user_registerDate_key">registerDate</string>
    <string name="user_birthDate_key">birthDate</string>
    <string name="user_pictureUrl_key">pictureUrl</string>
    <string name="user_smallPictureUrl_key">smallPictureUrl</string>
    <string name="user_largePictureUrl_key">largePictureUrl</string>
    <string name="user_userType_key">userType</string>
    <string name="user_gender_key">gender</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="find_appartment">Trouver des logements</string>
    <string name="find_travels">Chercher des trajets</string>
    <string name="know_deals">Connaître tous les bons plans de ma ville</string>
    <string name="know_student_status">Tout savoir sur le statut étudiant</string>
    <string name="school">Ecole</string>
    <string name="city">Ville</string>
    <string name="put_city_text">Je renseigne ma ville</string>
    <string name="put_school_text">Je renseigne mon école</string>
    <string name="finish">C\'est fini !</string>
    <string name="welcome_student">Bienvenue sur ton réseau étudiant.</string>
    <string name="finish_tuto_sentence">Découvre et propose tes bons plans, services, sorties, loisirs...</string>
    <string name="put_comment">Déposer un commentaire</string>
    <string name="contact">Contacter</string>
    <string name="community">Communauté</string>
    <string name="tips">Bons plans</string>
    <string name="settings">Réglages</string>

</resources>
