<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="studentnetwork.android.com.studentnetwork.activity.tuto.TutoActivity">
        <item
            android:id="@+id/action_community"
            android:enabled="true"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/community"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_tips"
            android:enabled="true"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/tips"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_settings"
            android:enabled="true"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"
            app:showAsAction="ifRoom" />

</menu>
