<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studentnetwork.android.com.studentnetwork.activity.RegisterActivity"
    android:background="@color/colorPrimaryBlue">
    <ImageView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/student"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:text="Inscription"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/register_layout_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_below="@id/register_text">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_nom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:errorEnabled="true"
            android:alpha="0.5"
            android:textColorHint="@color/colorPrimaryBlue">

            <EditText
                android:id="@+id/register_txt_nom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nom"
                android:inputType="textPersonName"
                android:background="@drawable/roundedinput"
                android:textColor="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_prenom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:errorEnabled="true"
            android:alpha="0.5"
            android:textColorHint="@color/colorPrimaryBlue">

            <EditText
                android:id="@+id/register_txt_prenom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prenom"
                android:inputType="textPersonName"
                android:background="@drawable/roundedinput"
                android:textColor="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_layout_mail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/register_layout_group"
        android:layout_margin="10dp"
        app:errorEnabled="true"
        android:alpha="0.5"
        android:textColorHint="@color/colorPrimaryBlue">

        <EditText
            android:id="@+id/register_txt_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/roundedinput"
            android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_layout_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/register_layout_mail"
        android:layout_margin="10dp"
        app:errorEnabled="true"
        android:alpha="0.5"
        android:textColorHint="@color/colorPrimaryBlue">

        <EditText
            android:id="@+id/register_txt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:background="@drawable/roundedinput"
            android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_layout_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/register_layout_password"
        android:layout_margin="10dp"
        app:errorEnabled="true"
        android:alpha="0.5"
        android:textColorHint="@color/colorPrimaryBlue">

        <EditText
            android:id="@+id/register_txt_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirmer_mot_de_passe"
            android:inputType="textPassword"
            android:background="@drawable/roundedinput"
            android:textColor="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickRegister"
        android:text="@string/inscription"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton"
        android:textColor="@color/white"/>

</RelativeLayout>
