<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBlue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/student"
            android:layout_margin="20dp"/>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/login_layout_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        app:errorEnabled="true"
            android:layout_below="@id/title_bar"
        android:background="@drawable/roundedinput"
        android:alpha="0.5"
        android:textColorHint="@color/colorPrimaryBlue">

        <EditText
            android:id="@+id/login_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/login_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_layout_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_layout_email"
        android:layout_margin="15dp"
        app:errorEnabled="true"
        android:background="@drawable/roundedinput"
        android:alpha="0.5"
        android:textColorHint="@color/colorPrimaryBlue">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

            <EditText
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"/>

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundedbutton"
        android:onClick="onClickLogin"
        android:text="@string/connexion"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_login_button"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/register_login_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/roundedbutton"
        android:onClick="onClickRegisterInLogin"
        android:text="Créer un compte"
        android:textColor="@android:color/white" />

</RelativeLayout>